syntax = "proto3";
package pkg.auth;

option go_package = "github.com/ScoreTrak/ScoreTrak/pkg/auth";


message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {string access_token = 1;}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {};
}