syntax = "proto3";
package pkg.user.userpb;

import "pkg/proto/utilpb/uuid.proto";

option go_package = "github.com/ScoreTrak/ScoreTrak/pkg/user/userpb";

message User {
  pkg.proto.utilpb.UUID id = 1;
  string username = 2;
  pkg.proto.utilpb.UUID team_id = 4;
  string password = 5;
  Role role = 6;
  string password_hash = 7;
}

enum Role {
  Blue = 0;
  Red = 1;
  Black = 2;
}

message GetAllRequest{}
message GetAllResponse{
  repeated User users = 1;
}

message GetByIDRequest{
  pkg.proto.utilpb.UUID id = 1;
}
message GetByIDResponse{
  User user = 1;
}

message DeleteRequest{
  pkg.proto.utilpb.UUID id = 1;
}

message DeleteResponse{}

message StoreRequest{
  repeated User users = 1;
}

message StoreResponse{
  repeated pkg.proto.utilpb.UUID ids = 1;
}

message UpdateRequest{
  User user = 1;
}

message UpdateResponse{}

message GetByUsernameRequest{
  string username = 1;
}

message GetByUsernameResponse{
  User user = 1;
}

service UserService{
  rpc GetAll(GetAllRequest) returns (GetAllResponse){}
  rpc GetByID(GetByIDRequest) returns (GetByIDResponse){}
  rpc Delete(DeleteRequest) returns (DeleteResponse){}
  rpc Store(StoreRequest) returns (StoreResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc GetByUsername(GetByUsernameRequest) returns (GetByUsernameResponse) {}
}